--- a/WageTimer/index.html
+++ b/WageTimer/index.html
@@ -67,7 +67,7 @@
             <p class="splash-subhead">Amount Earned:</p>
             <h1 class="splash-head"><span id="amountearned" style="font-size:larger;">$00.00</span></h1>
             <p class="splash-subhead">
-                <noscript>Sorry, you need javascript to run this :(</noscript>
+                <noscript style="color:red;">Sorry, you need javascript to run this :(</noscript>
             </p>
             <p class="splash-subhead">
                 Input your wage per hour:
