Added readme and licensing.

--- a/WageTimer/index.html
+++ b/WageTimer/index.html
@@ -94,7 +94,7 @@
     <div class="footer l-box is-center">
         <span>CSS by <a href="http://purecss.io">Pure.css</a>.&nbsp;&nbsp;&nbsp;&nbsp;</span>
         <span>Idea by my friend, <a href="https://twitter.com/Jgallstar1_tv">Jgallstar1.</a>&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        <span>Copyright &copy; 2017 Seth Hendrick</span>
+        <span>Copyright &copy; 2017 Seth Hendrick under the <a href="http://www.boost.org/LICENSE_1_0.txt">BSL 1.0</a></span>
     </div>
     <!-- End Footer -->
 
