--- a/WageTimer/index.html
+++ b/WageTimer/index.html
@@ -58,7 +58,7 @@
 
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="https://github.com/xforever1313/WageTimer" class="pure-menu-link">GitHub</a></li>
-                <li class="pure-menu-item"><a href="https://shendrick.net" class="pure-menu-link">My Website</a></li>
+                <li class="pure-menu-item"><a href="https://www.shendrick.net" class="pure-menu-link">My Website</a></li>
             </ul>
         </div>
     </div>
