Added timer logic.
TODO: Figure out how to CSS.

--- a/WageTimeBlazor/WageTimeBlazor/wwwroot/index.html
+++ b/WageTimeBlazor/WageTimeBlazor/wwwroot/index.html
@@ -17,11 +17,12 @@
     <!-- Begin Header -->
     <div class="header">
         <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-            <a class="pure-menu-heading" href="#">Wage Timer</a>
+            <span class="pure-menu-heading">Wage Timer - Powered by Blazor</span>
 
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="https://github.com/xforever1313/WageTimer" class="pure-menu-link">GitHub</a></li>
+                <li class="pure-menu-item"><a href="https://github.com/xforever1313/WageTimer/tree/master/WageTimeBlazor" class="pure-menu-link">GitHub</a></li>
                 <li class="pure-menu-item"><a href="https://www.shendrick.net" class="pure-menu-link">My Website</a></li>
+                <li class="pure-menu-item"><a href="https://github.com/aspnet/Blazor" class="pure-menu-link">About Blazor</a></li>
             </ul>
         </div>
     </div>
