Set the base to where its going to end up on the server.

--- a/WageTimeBlazor/WageTimeBlazor/wwwroot/index.html
+++ b/WageTimeBlazor/WageTimeBlazor/wwwroot/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Seth Hendrick">
     <meta name="keywords" content="Wage,Timer,seth,hendrick,fun,jgallstar1,xforever1313,money,dollars,salary,blazor">
     <title>Wage Timer - Blazor</title>
-    <base href="/" />
+    <base href="/fun/wagetimer-blazor/" />
     <link rel="stylesheet" href="https://files.shendrick.net/common/css/pure/pure-min.css" type="text/css" />
     <link rel="stylesheet" href="https://files.shendrick.net/common/css/pure/grids-responsive-min.css" type="text/css" />
     <link rel="stylesheet" href="https://files.shendrick.net/common/css/pure/marketing.css" type="text/css" />
